<resources>
    <!-- General. -->
    <string name="google_maps_key" translatable="false">AIzaSyAxFnfrTaPG7VZ6VJLz-CV2pIDe-ti0NPc</string>
    <string name="app_name" translatable="false">WeThere?</string>
    <string name="preferences_key" translatable="false">RWTYPreferences</string>
    <string name="no_internet_access">No internet access</string>
    <string name="locations_file_name">locations.json</string>

    <!-- MainActivity. -->
    <string name="main_activity_name" translatable="false">Main</string>
    <string name="main_menu_settings">Settings</string>
    <string name="locations_fragment_name">Locations</string>
    <string name="distance_fragment_name">Distance</string>

    <!-- AddLocationActivity. -->
    <string name="add_location_activity_name">Add Location</string>
    <string name="new_location_label">Label:</string>
    <string name="new_location_label_hint">Washington</string>
    <string name="new_location_radius">Radius:</string>
    <string name="new_location_ringtone">Ringtone:</string>
    <string name="new_location_coords">Position:</string>
    <string name="new_location_search_hint">Address</string>

    <!-- SettingsActivity. -->
    <string name="settings_activity_name" translatable="false">Settings</string>
    <string name="setting_theme">Theme</string>

    <!-- NotificationService. -->
    <string name="destination_reached">Here we are!</string>

    <!-- Preferences. -->
    <string name="preference_theme_key" translatable="false">Theme</string>
    <string name="preference_theme_title">Theme</string>
    <string name="preference_theme_summary">theme</string>
    <string name="preference_distances_key" translatable="false">DistancesMap</string>
    <string name="preference_distances_title">Distances Map</string>
    <string name="preference_distances_summary">list/map</string>
    <string name="preference_theme_default" translatable="false">Fuscus</string>
    <string name="preference_ringtone_key" translatable="false">Ringtone</string>
    <string name="preference_ringtone_title">Default Ringtone</string>
    <string name="preference_ringtone_summary">ringtone</string>
    <string name="preference_location_index_key">index</string>

    <!-- Themes. -->
    <string name="theme_fuscus" translatable="false">Fuscus</string>
    <string name="theme_albus" translatable="false">Albus</string>

    <!-- Widget -->
    <string name="appwidget_text">WeThere</string>
    <string name="add_widget">Add widget</string>

</resources>
