<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/preference_theme_key"
        android:title="@string/preference_theme_title"
        android:summary="@string/preference_theme_summary"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="@string/theme_fuscus"
        android:dialogTitle="@string/preference_theme_title" />

    <RingtonePreference
        android:key="@string/preference_ringtone_key"
        android:title="@string/preference_ringtone_title"
        android:summary="@string/preference_ringtone_summary"
        android:ringtoneType="alarm"/>

    <SwitchPreference
        android:key="@string/preference_distances_key"
        android:title="@string/preference_distances_title"
        android:defaultValue="false"/>

</PreferenceScreen>