<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?RWTYBackgroundColor">

    <ScrollView
        android:id="@+id/addLocationScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/new_location_label"
                android:inputType="textCapWords"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/newLocationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/new_location_label_hint"
                android:inputType="textCapWords"
                android:textSize="34sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/new_location_radius"
                android:inputType="textCapWords"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/newLocationRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textCapWords"
                android:textSize="20sp"
                android:text="0 km"/>

            <SeekBar
                android:id="@+id/newLocationRadiusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/new_location_coords"
                android:inputType="textCapWords"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/searchPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/new_location_search_hint"
                android:inputType="textCapWords"
                android:textSize="26sp" />

            <keym.dev.rwethereyet.addlocation.ScrollableMapView
                android:id="@+id/newLocationMap"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newLocationDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="24dp"
        android:src="@drawable/ic_done_white_24dp"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>